--- a/Style/style.css
+++ b/Style/style.css
@@ -56,6 +56,9 @@ body {
 
 }
 
+footer {
+  margin-top: 10vh;
+}
 
 h1 {
 
@@ -71,19 +74,20 @@ header {
   z-index: 10;
 }
 
-.offre{
+.offre {
   border: red;
   border-style: dashed;
-  
+
   text-align: center;
   margin-top: 10vh;
   margin-left: 10vw;
   margin-right: 10vw;
 }
-.offre img{
+
+.offre img {
   margin: auto;
   max-width: 50vw;
-   max-height: 40vh;
+  max-height: 40vh;
 }
 
 nav {
@@ -109,12 +113,10 @@ nav li a {
 .formulaire {
   background-color: #5E54AB;
   margin: auto;
-  width: 75vw;
+  width: 50vw;
   text-align: center;
   padding-top: 2vh;
   padding-bottom: 8vh;
-  padding-right: 2vw;
-  padding-left: 2vw;
   border-radius: 50%;
 }
 
@@ -125,6 +127,8 @@ nav li a {
 .inputnumber {
   width: 3vw;
 }
+
+
 
 .Images {
   background-color: #7a6ddd;
