--- a/Style/index.css
+++ b/Style/index.css
@@ -71,7 +71,7 @@ header {
   top: 0vh;
   margin-top: 5vh;
   padding: 20px;
-  background-color: #8377de;
+  background-color: #7a6ddd;
   z-index: 10;
 }
 
